добавил QA Инженер

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <header class="header">
       <img src="avat.png" alt="avatar" class="header__avatar" />
       <h1 class="header__title">Бедняжевский Владислав</h1>
+      <p>
+        QA Инженер
+      </p>
       <h3 class="header__subtitle">Парень с Севера</h3>
     </header>
     <main>
